[project]
name = "product-lst"
version = "0.1.0"
description = "Constellr Public Documentation"
authors = [
    {name = "Jonas Berhin", email = "jonas.berhin@constellr.com"},
]
dependencies = [
    "mkdocs>=1.5.3",
    "pandoc>=2.3",
    "mkdocs-material>=9.5.15",
    "mkdocs-bibtex>=2.14.4",
    "mike>=2.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
