[project]
name = "product-lst"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jonas Berhin", email = "jonas.berhin@constellr.com"},
    {name = "chanico1", email = "nicolas.chamberland@constellr.com"},
]
dependencies = [
    "mkdocs>=1.6.1",
    "pandoc>=2.4",
    "mkdocs-material>=9.6.5",
    "mike>=2.1.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
]
